[package]
name = "art_gen"
version = "0.1.1"
authors = ["Holmer, Rens <rens.holmer@wur.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.0"
csv = "1.1.6"
itertools = "0.10.0"
serde = { version = "1.0", features = ["derive"] }